--- a/heima/pom.xml
+++ b/heima/pom.xml
@@ -3,5 +3,6 @@
   <groupId>com.itheima</groupId>
   <artifactId>heima</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <>
+  <lee>
+  </lee>
 </project>
